--- a/TelerikTest/Properties/Resources.resx
+++ b/TelerikTest/Properties/Resources.resx
@@ -160,4 +160,7 @@
   <data name="mail_replayall_2860" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mail_replayall_2860.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="trash_files" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\trash_files.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
