--- a/TelerikTest/Properties/Resources.resx
+++ b/TelerikTest/Properties/Resources.resx
@@ -163,4 +163,10 @@
   <data name="trash_files" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\trash_files.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LoadingNotice" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LoadingNotice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LoadingNoticeOrig" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LoadingNoticeOrig.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
